tests/baselines/reference/downlevelLetConst19.errors.txt
tests/cases/compiler/downlevelLetConst19.ts(9,14): error TS1250: In ES5 or lower, function declarations are not allowed in block scope in strict mode.


==== tests/cases/compiler/downlevelLetConst19.ts (1 errors) ====
    'use strict'
    declare function use(a: any);
    var x;
    function a() {
      {
        let x;
        use(x);
    
        function b() {
                 ~
!!! error TS1250: In ES5 or lower, function declarations are not allowed in block scope in strict mode.
            {
                let x;
                use(x);
            }
            use(x);
        }
      }
      use(x)
    }
    use(x)